# image_generation

./: README.md  bg_remover.py  im_web_scrapper_v1.py  img_remover.py  letterbox.py  main.py  pyproject.toml  requirements.txt
image_generation/: Makefile  dataset.py  features.py  pyproject.toml
image_generation/docs/: mkdocs.yml
image_generation/docs/docs/: index.md
image_generation/modeling/: train.py
notebooks/: 1.0-rtg-initial-data-exploration.ipynb  conv_ae.ipynb
