[project]
name = "image-generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "onnxruntime>=1.24.2",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
    "rembg[cpu,gpu]>=2.0.72",
    "requests>=2.32.5",
    "selenium>=4.40.0",
    "tqdm>=4.67.3",
    "webdriver-manager>=4.0.2",
]
