[project]
name = "image-generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "keras>=3.13.2",
    "matplotlib>=3.10.8",
    "mlflow>=1.27.0",
    "onnxruntime>=1.24.2",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "rembg[cpu,gpu]>=2.0.72",
    "requests>=2.32.5",
    "selenium>=4.40.0",
    "tensorflow>=2.20.0",
    "tqdm>=4.67.3",
    "webdriver-manager>=4.0.2",
]
